tests/NormalTests/paczka2/big_fuzzy/76095073.err
Error in line 18: A350 S128 -2,7
Error in line 1: A350 S128 43,6
Error in line 36: RRKqdLimC5T S128 14,4
Error in line 51: lFeVwG A350 31,0
Error in line 58: N29 S128 69,4
Error in line 67: Ig3 S128 36,0
Error in line 68: Ig3 A350 38,9
Error in line 74: A350 S128 9,7
Error in line 81: KRSd S128 62,3
Error in line 90: lFeVwG S128 8,7
Error in line 96: RRKqdLimC5T A350 [5,9
Error in line 95: lFeVwG S975 87,4
Error in line 97: lFeVwG S948 59,0
Error in line 85: KRSd S948 81,6
Error in line 103: A350 S975 86,0
Error in line 107: RRKqdLimC5T S975 57,7
Error in line 104: lFeVwG S128 22,3
Error in line 105: KRSd S128 52,3
Error in line 102: N29 S128 186,2
Error in line 125: KRSd S948 95,6
Error in line 88: 2S6 S975 179,4
Error in line 144: Ig3 A350 7,1
Error in line 138: 2S6 S128 20,1
Error in line 147: RRKqdLimC5T S128 40,5
Error in line 168: RRKqdLimC5T S128 17,3
Error in line 175: RRKqdLimC5T AD50 98,5
Error in line 171: A350 S948 41,5
Error in line 179: lFeVwG S948 108,2
Error in line 181: lFeVwG A350 63,4
Error in line 170: RRKqdLimC5T A350 99,5
Error in line 187: KRSd A350 52,9
Error in line 177: Ig3 A350 81,3
Error in line 202: Ig3 S975 16,4
Error in line 205: Ig3 S948 75,0
Error in line 173: 2S6 S975 20,2
Error in line 208: A350 A350 64,6
Error in line 203: lFeVwG S975 96,3
Error in line 211: A350 S128 41,0
Error in line 235: lFeVwG S128 28,28
Error in line 222: RRKqdLimC5T S128 83,6
Error in line 244: Ig3 S975 82,8
Error in line 240: RRKqdLimC5T S975 93,2
